<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="40dp"
        android:text="@string/login_btn_text"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_below="@id/textViewLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType=""
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_below="@+id/editTextUsername"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        tools:ignore="TextFields" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:text="@string/login_btn_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/textViewNoAccount"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/no_account"
        android:textColor="@color/black"
        android:textSize="20sp"

        />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/footer"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="6dp"
            android:text="@string/brand"
            android:textColor="#FFF"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>