<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-24dp">

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/trip_type"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnFlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/white"
            android:text="@string/flight_btn"
            android:visibility="visible"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnViewRegisteredTrip"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:visibility="gone"
            android:text="@string/btnViewRegisteredTrip"
             />

        <Button
            android:id="@+id/btnDelete"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:visibility="visible"
            android:text="@string/btnCompleteTrip"
            />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="224dp"
            android:layout_height="90dp"
            android:layout_marginTop="50dp" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navbar" />
</RelativeLayout>
