<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="25dp"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/trip_code"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardInViewer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                android:visibility="gone"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">
                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/mapInViewer"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:layout_marginTop="5dp" />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/tripSecret"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/enterTripCode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:layout_marginHorizontal="20dp"
                    android:autofillHints=""
                    android:hint="@string/enter_trip_name"
                    android:inputType=""
                    android:textColorHint="@color/black" />
                <TextView
                    android:id="@+id/textEnterPw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/password"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/enterTripPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:layout_marginHorizontal="20dp"
                    android:autofillHints=""
                    android:hint="@string/enterTripPassword"
                    android:inputType=""
                    android:textColorHint="@color/black"
                    tools:ignore="TextFields" />
                <Button
                    android:id="@+id/buttonSearchCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:layout_margin="10dp"
                    android:text="@string/findTrip"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_alignParentBottom="true"
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/navbar"/>

</RelativeLayout>